--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -7,6 +7,7 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: 'Indie Flower', cursive;
 }
 
 .grid {
